# datawarehouse

./: README.md  manage_etl_arg.py  pyproject.toml
config/: db_config.py  logging_config.py
data_warehouse/: pyproject.toml
etl/: extract.py  load.py  schema_evolution.py  transform.py  update_dimensions.py
etl/transform/: transform_products.py  transform_sales.py
etl/transformers/: transform_customers.py  transform_sales.py
meta_data/: customers_metadata.json  products_metadata.json  sales_metadata.json
raw_data/: customers.csv  product.csv  sales.csv  transactions-and-notes-export.csv
schema/: customers_schema.sql  products_schema.sql  sales_schema.sql
scripts/: generic_transform.py  initial_load.py  manage_etl.py  update_customers.py  update_dimensions.py  update_products.py  update_sales.py
staging/: stocks.parquet
